# src/api/product/domain/product.mapper.ts
@@ -1,6 +1,30 @@
 import { IProduct } from '@INTERFACE/product';
+import { Product } from '@PRISMA';
 
 export namespace ProductMapper {
+  export const toDomain = (model: Product): IProduct => {
+    const {
+      id,
+      name,
+      price,
+      description,
+      store_id,
+      is_deleted,
+      created_at,
+      updated_at,
+    } = model;
+    return {
+      id,
+      name,
+      price,
+      description,
+      store_id,
+      created_at: created_at.toISOString(),
+      updated_at: updated_at.toISOString(),
+      is_deleted,
+    };
+  };
+
   export const toSummary = (
     product: IProduct,
     store: IProduct.Store,
